--- a/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Option/properties.mdx
+++ b/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Option/properties.mdx
@@ -9,4 +9,5 @@ showTabs: true
 | `value`    | `string` or `number` | _(optional)_ Value for this option.           |
 | `title`    | `string`             | _(optional)_ Text title for the option.       |
 | `text`     | `string`             | _(optional)_ Secondary text.                  |
+| `disabled` | `boolean`            | _(optional)_ Will disable the option          |
 | `children` | `React.Node`         | _(optional)_ Optional way to provide `title`. |
