update options documentation

--- a/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/ArraySelection/info.mdx
+++ b/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/ArraySelection/info.mdx
@@ -6,6 +6,8 @@ showTabs: true
 
 `Field.ArraySelection` is a component for selecting between a fixed set of options using checkboxes or similar, that will produce a value in the form of an array containing the values of selected options.
 
+Uses the [Field.Option](/uilib/extensions/forms/base-fields/Option/) pseudo-component to define options.
+
 There is a corresponding [Value.ArraySelection](/uilib/extensions/forms/Value/ArraySelection) component.
 
 ```jsx
