--- a/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Option/properties.mdx
+++ b/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Option/properties.mdx
@@ -2,12 +2,11 @@
 showTabs: true
 ---
 
+import PropertiesTable from 'dnb-design-system-portal/src/shared/parts/PropertiesTable'
+import { OptionProperties } from '@dnb/eufemia/src/extensions/forms/Field/Option/OptionDocs'
+
 ## Properties
 
-| Property   | Type                 | Description                                                                       |
-| ---------- | -------------------- | --------------------------------------------------------------------------------- |
-| `value`    | `string` or `number` | _(optional)_ Value for this option.                                               |
-| `title`    | `React.Node`         | _(optional)_ Text title for the option.                                           |
-| `text`     | `React.Node`         | _(optional)_ Secondary text.                                                      |
-| `disabled` | `boolean`            | _(optional)_ Will disable the option                                              |
-| `children` | `React.Node`         | _(optional)_ Optional way to provide `title`. Will be ignored if `title` is used. |
+There might be more props available depending on the parent component. (For example, `<Field.Selection variant="button">` also allows the `icon` prop, among others, for its options.)
+
+<PropertiesTable props={OptionProperties} />
