--- a/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Selection/info.mdx
+++ b/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/base-fields/Selection/info.mdx
@@ -6,7 +6,7 @@ showTabs: true
 
 `Field.Selection` is a component for selecting between options using a dropdown or similar user experiences.
 
-[Field.Option](/uilib/extensions/forms/base-fields/Option/) is a related component.
+Uses the [Field.Option](/uilib/extensions/forms/base-fields/Option/) pseudo-component to define options.
 
 There is a corresponding [Value.Selection](/uilib/extensions/forms/Value/Selection) component.
 
