--- a/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/changelog.mdx
+++ b/packages/dnb-design-system-portal/src/docs/uilib/extensions/forms/changelog.mdx
@@ -15,7 +15,7 @@ Change log for the Eufemia Forms extension.
 
 ## v10.56
 
-- Added support for [DatePicker properties](/uilib/components/date-picker/properties/) to [Field.Date](/uilib/extensions/forms/feature-fields/Date/).
+- Added support for [DatePicker properties](/uilib/components/date-picker/properties/) in [Field.Date](/uilib/extensions/forms/feature-fields/Date/).
 - Fixes so `info` and `warning` properties renders given elements
 
 ## v10.55.1
